// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"Incorrect

function x(x: number): void;
function x(x: string): void;
           ~~~~~~~~~ These overloads can be combined into one signature taking \`number | string\`.
"
`;

exports[` 2`] = `
"Incorrect

function y(): void;
function y(...x: number[]): void;
           ~~~~~~~~~~~~~~ These overloads can be combined into one signature with a rest parameter.
"
`;

exports[` 3`] = `
"Correct

function x(x: number | string): void;
"
`;

exports[` 4`] = `
"Correct

function y(...x: number[]): void;
"
`;

exports[` 5`] = `
"Correct

// This rule won't check overload signatures with different rest parameter types.
// See https://github.com/microsoft/TypeScript/issues/5077
function f(...a: number[]): void;
function f(...a: string[]): void;
"
`;

exports[` 6`] = `
"Incorrect
Options: { "ignoreDifferentlyNamedParameters": true }

function f(a: number): void;
function f(a: string): void;
           ~~~~~~~~~ These overloads can be combined into one signature taking \`number | string\`.
"
`;

exports[` 7`] = `
"Correct
Options: { "ignoreDifferentlyNamedParameters": true }

function f(a: number): void;
function f(b: string): void;
"
`;
